--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <web-app>
     <servlet>
         <servlet-name>Login</servlet-name>
-        <servlet-class>Login</servlet-class>
+        <servlet-class>src.Login</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
