--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -15,4 +15,20 @@
         <servlet-name>WardenPage</servlet-name>
         <url-pattern>/warden</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>OutpassPage</servlet-name>
+        <servlet-class>src.OutpassPage</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>OutpassPage</servlet-name>
+        <url-pattern>/view</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>Accept</servlet-name>
+        <servlet-class>src.Accept</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Accept</servlet-name>
+        <url-pattern>/accept</url-pattern>
+    </servlet-mapping>
 </web-app>
