--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -31,4 +31,20 @@
         <servlet-name>Accept</servlet-name>
         <url-pattern>/accept</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>Reject</servlet-name>
+        <servlet-class>src.Reject</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Reject</servlet-name>
+        <url-pattern>/reject</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>StudentPage</servlet-name>
+        <servlet-class>src.StudentPage</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>StudentPage</servlet-name>
+        <url-pattern>/student</url-pattern>
+    </servlet-mapping>
 </web-app>
