--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -6,8 +6,16 @@
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
-    </servlet-mapping>                
-    <servlet>   
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>SignOut</servlet-name>
+        <servlet-class>src.SignOut</servlet-class>   
+    </servlet>    
+    <servlet-mapping>
+        <servlet-name>SignOut</servlet-name>
+        <url-pattern>/signout</url-pattern>
+    </servlet-mapping>                 
+    <servlet>  
         <servlet-name>WardenPage</servlet-name>
         <servlet-class>src.WardenPage</servlet-class>
     </servlet>
